# giz_line_pr_maker_api

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.md
app/: main.py
app/api/: health.py  pr.py  upload.py
app/core/: auth.py  config.py  database.py
app/models/: pr_bubble.py
app/schemas/: pr_bubble.py
app/services/: pr_service.py  r2_service.py
